# RAVENS

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  make_mbed.sh  update.sh
common/: layout.h
common/crypto/: Benchmark.md  CMakeLists.txt  config.h  core.c  crypto.h  crypto_cli.c  crypto_cli.h  crypto_utils.h  hash.c  hashUtils.c  libhydrogen.lib  sha256.h  sha256.min.c  signUtils.c  signature.c
common/decoding/: decoder.c  decoder.h  decoder_config.h
common/lzfx-4k/: lzfx.c  lzfx.h  test.c
docs/: instructions.md  manifest_format.md
hugin/: CMakeLists.txt  hugin_core.cpp
hugin/CLI/: authentication.cpp  scheduler_batch.cpp  scheduler_cli.cpp  scheduler_cli.h
hugin/Scheduler/: Address.h  Block.h  CMakeLists.txt  DetailedBlock.h  Token.h  VirtualMemory.h  bsdiff_testing.cpp  cache_management.cpp  config.h  dynamic_tests.cpp  graph.cpp  network.h  networks.cpp  public_command.h  scheduler.cpp  scheduler.h  scheduler_codegen.cpp  scheduler_codegen_optim.cpp  scheduler_passes.cpp  scheduler_utils.cpp  static_tests.cpp  validation.cpp  validation.h  virtual_machine.cpp
hugin/Scheduler/Encoding/: encoder.cpp  encoder.h  encoder_utils.cpp
hugin/Scheduler/bsdiff/: bsdiff.cpp  bsdiff.h  bsdiff_utils.c
hugin/Scheduler/dynamic_test_files/: new.txt  new2.txt  old.txt  old2.txt
hugin/webserver/: importConfig.py  odin.py  server.py  update.py  zeus.py
hugin/webserver/update/: update.json
hugin/webserver/update/FactorioBot/: manifest1_1  manifest2_1  priv_1
hugin/webserver/update/FactorioBot.old/: manifest1_1  manifest2_1  priv_1
munin/: CMakeLists.txt  core.c  core.h  driver_api.h  io_management.h  validation.c  validation.h
munin/Bytecode/: execution.c  execution.h  execution_utils.c
munin/Delta/: bsdiff.c  bsdiff.h  lzfx_light.c  lzfx_light.h
munin/Userland/: userland.c  userland.h  userland_utils.c
munin/integration/drivers/K64F/: FreescaleIAP.cpp  FreescaleIAP.h  device_config.h  driver.cpp
munin/integration/mbedOS/: main.cpp  make_mbed.sh  mbed_app.json
munin/integration/mbedOS/network/: mbed_app.json  network.cpp  network.h
test_files/: commandLines.txt  config.json  priv.key  pub.key
